# neuromance

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  image.nix  justfile
crates/neuromance/: Cargo.toml
crates/neuromance-agent/: Cargo.toml
crates/neuromance-agent/examples/: adversarial_repl.rs  agent_task_vampire.rs  fanout_vote.rs  sequential_agents.rs  sequential_agents_builder.rs
crates/neuromance-agent/src/: builder.rs  lib.rs  tests.rs
crates/neuromance-agent/src/subagent/: combinators.rs  local.rs  mod.rs  tool.rs
crates/neuromance-agent/src/task/: agents.rs  mod.rs
crates/neuromance-cli/: Cargo.toml
crates/neuromance-cli/src/: client.rs  commands.rs  display.rs  main.rs  main_old.rs  repl.rs  theme.rs
crates/neuromance-client/: Cargo.toml
crates/neuromance-client/benches/: streaming.rs
crates/neuromance-client/examples/: anthropic_demo.rs  chat_completions_demo.rs  openai_demo.rs  reasoning_demo.rs  responses_demo.rs  streaming_demo.rs  time_tool_demo.rs
crates/neuromance-client/src/: embedding.rs  error.rs  lib.rs  message.rs  retry_logging.rs  transport.rs
crates/neuromance-client/src/anthropic/: client.rs  mod.rs
crates/neuromance-client/src/chat_completions/: client.rs  embedding.rs  mod.rs
crates/neuromance-client/src/openai/: client.rs  embedding.rs  mod.rs
crates/neuromance-client/src/responses/: client.rs  mod.rs
crates/neuromance-client/src/streaming/: mod.rs  sse.rs
crates/neuromance-common/: Cargo.toml
crates/neuromance-common/src/: agents.rs  chat.rs  client.rs  context.rs  delegation.rs  events.rs  features.rs  hook.rs  lib.rs  protocol.rs  subagent.rs  task.rs  tools.rs
crates/neuromance-common/src/client/: config.rs  enums.rs  mod.rs  request.rs  response.rs  usage.rs
crates/neuromance-context/: Cargo.toml
crates/neuromance-context/examples/: chat_template.rs  count_tokens.rs  gguf_metadata.rs  gguf_tokenizer.rs  prompt_caching.rs  qwen3_token_counting.rs  token_navigation.rs
crates/neuromance-context/src/: compaction.rs  compaction_hook.rs  context.rs  error.rs  gguf.rs  jinja_compat.rs  lib.rs  metadata.rs  navigation.rs  state.rs  template.rs  transforms.rs
crates/neuromance-context/src/rules/: catalog.rs  error.rs  frontmatter.rs  hook.rs  mod.rs  model.rs  source.rs
crates/neuromance-context/src/skills/: catalog.rs  (+7 more)
crates/neuromance-daemon/: Cargo.toml
crates/neuromance-daemon/src/: config.rs  conversation_manager.rs  error.rs  lib.rs  main.rs  paths.rs  process.rs  server.rs  storage.rs
crates/neuromance-db/: Cargo.toml
crates/neuromance-db/.sqlx/: query-0a17ebe9f700a529a0da4d7b8f2f3ff5ddad4fb6e56ef9a2f0c729fb9f288b70.json  query-0e2a8fb3739df4b39b5ad90d74ad6772261b88da08ab18601882c354de4c33eb.json  query-24ea9f4b8385bb914c09c36c3669504f87ed24e102afc31838e817397e497c78.json  query-2a3ed258e47338b2880db37327f6b1d6418cf5fc0664bedf91f064822cb695ec.json  query-3149ed0097c79d30b7d194aeec88af51cc36dbf286945cd9eea351b0b180d5a2.json  query-38cbfd6514452de165c3fba121efce71a0a1a3dbaf7d0bfa86bf19225bcb3806.json  query-3f1973cd2ec75b0a49514a9dd6a74817d33ca04bc44539fe2600a8336d636d45.json  query-474f218357feb20ab0642d0db73b66b2dd550fdc3c0d376ad60a9b10e560be50.json  query-4a7f26114a90d1e8f3dcf2019c1fa773f7dfa62f2a35bf505fb892255870a0f9.json  query-73b06a1bcbaa9f54d02d59f72209fad9acbffab7de1fa23ea81a034151b0bdf9.json  query-7513debe19ed8df2db9926ead53e9c59619492de162d57da23b22e80eaca8ffc.json  query-78b21590277a247ead0e81f83953476776763b65bf3d6382f409a08307165b68.json  query-87ac674c4a4db2a3c2c34be6eefbdd2109dc796f2df4515b9e0b804f24964c5d.json  query-8ffa2c7fc8cef481813ce41cc0bb6f36f9d894a63bde7f3d87a714c026f84947.json  query-9826efd580502e168c7ae6f8ee5e1c703a95810494e5b5e48f9156e252f0df63.json  query-a0839415f7b7f3a0bdfc2746c4efda0834a9cb6558d95d6b57aac05939bf8dfc.json  query-a156f45f1b982159c1f6f17675d3fb4bbf067984c848470fa48cab25166ed1d0.json  query-a348050d6a0990591f465a5dca37795935ba222adde15d9b2e19fdb6b66af225.json  query-ae1e676d8bc30190b31f89f2fae3bc76149d3a2340b9464ad892d75b953eb602.json  query-b15ff80475f268070f2dd7b9d6d31e7347a4df25b5f8d0d6c995e8fc3578199f.json  query-b2a49de4bc126379f6cd50ab499bf52e11e8b6044aa219ead881c3f5f9c7b865.json  query-b73e74952d1a91fdd6c3e526069a2a6c073986723268438df7f66935c5703e1a.json  query-c6b9ee2587220b534f74c900d320dd00ca2390604c73d440fda8a073419ecf0b.json  query-cdbcf72f9491cc7b35a095a7a9c09478fb9d0ecc8fb95451e801d050131aaa2c.json  query-df9dbf03c140b93ec73fa606ade80beb97da6c9a59a5e9669bb5608fb3cf6650.json  query-ea96e17f3f68d419796170db60672755d2ba2ee03372319d4e4dcde7d961e4c4.json
crates/neuromance-db/migrations/: 0001_conversations.sql  0002_tasks.sql  0003_conversation_parent.sql  0004_message_model_usage.sql  0005_conversation_parent_message.sql  0006_task_status.sql
crates/neuromance-db/src/: error.rs  hook.rs  lib.rs  rows.rs  sink.rs  store.rs
crates/neuromance-db/tests/: store.rs
crates/neuromance-proto/: Cargo.toml  build.rs
crates/neuromance-proto/src/: convert.rs  lib.rs
crates/neuromance-repl/: Cargo.toml  dev_utils.rs
crates/neuromance-repl/benches/: repl_resources.rs
crates/neuromance-repl/examples/: depth_stress_test.rs  python_subagent.rs  recursive_llm_query.rs
crates/neuromance-repl/src/: error.rs  lib.rs  sandbox.rs
crates/neuromance-runtime/: Cargo.toml  build.rs
crates/neuromance-runtime/proto/: sandbox.proto
crates/neuromance-runtime/src/: approval.rs  bootstrap.rs  config.rs  error.rs  factory.rs  health.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  oneshot.rs  proxy.rs  rules.rs  serve.rs  skills.rs  subagents.rs  task_store.rs  telemetry.rs
crates/neuromance-tools/: Cargo.toml
crates/neuromance-tools/src/: bash_tool.rs  bool_tool.rs  edit_tool.rs  error.rs  factory.rs  find_tool.rs  generic.rs  grep_tool.rs  lib.rs  ls_tool.rs  read_file.rs  read_tool.rs  skill_tool.rs  think_tool.rs  todo_tool.rs  truncate.rs  write_tool.rs
crates/neuromance/examples/: self_conversation_demo.rs  streaming_time_tool_demo.rs
crates/neuromance/src/: context_management.rs  core.rs  error.rs  events.rs  lib.rs  stats.rs
(+30 files in other folders)
