[workspace]
resolver = "2"
members = [
  "crates/neuromance",
  "crates/neuromance-agent",
  "crates/neuromance-cli",
  "crates/neuromance-common",
  "crates/neuromance-client",
  "crates/neuromance-tools",
  "crates/neuromance-daemon",
  "crates/neuromance-proto",
]

[workspace.metadata.crane]
name = "neuromance"

[workspace.package]
version = "0.0.6"
edition = "2024"
rust-version = "1.90"
authors = ["Evan Dobry <evandobry@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/windowlickers/neuromance"
homepage = "https://github.com/windowlickers/neuromance"
documentation = "https://docs.rs/neuromance"
readme = "README.md"
keywords = ["llm", "openai", "orchestration"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[workspace.dependencies]
# Internal crates
neuromance-common = { version = "0.0.6", path = "crates/neuromance-common" }
neuromance-client = { version = "0.0.6", path = "crates/neuromance-client" }
neuromance-tools = { version = "0.0.6", path = "crates/neuromance-tools" }
neuromance-agent = { version = "0.0.6", path = "crates/neuromance-agent" }
neuromance = { version = "0.0.6", path = "crates/neuromance" }
neuromance-daemon = { version = "0.0.6", path = "crates/neuromance-daemon" }
neuromance-proto = { version = "0.0.6", path = "crates/neuromance-proto" }

# External dependencies
anyhow = "1.0"
base64 = "0.22"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
dashmap = "6.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
reqwest-eventsource = "0.6"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-retry-after = "0.2"
regex = "1.11.3"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
typed-builder = "0.22"
secrecy = { version = "0.10", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
toml = "0.9.7"
rmcp = { version = "0.14.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
]}
url = "2.5"
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
hyper-util = "0.1"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
 all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
debug = true
