[workspace]
resolver = "2"
members = [
  "crates/neuromance",
  "crates/neuromance-agent",
  "crates/neuromance-common",
  "crates/neuromance-client",
  "crates/neuromance-db",
  "crates/neuromance-repl",
  "crates/neuromance-runtime",
  "crates/neuromance-tools",
]

[workspace.metadata.crane]
name = "neuromance"

[workspace.metadata.release]
shared-version = true
consolidate-commits = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
publish = true
push = false

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Evan Dobry <evandobry@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/windowlickers/neuromance"
homepage = "https://github.com/windowlickers/neuromance"
documentation = "https://docs.rs/neuromance"
readme = "README.md"
keywords = ["llm", "orchestration"]
categories = ["api-bindings", "asynchronous", "web-programming"]

[workspace.dependencies]
# Internal crates
neuromance-common = { version = "0.1.0", path = "crates/neuromance-common" }
neuromance-client = { version = "0.1.0", path = "crates/neuromance-client" }
neuromance-tools = { version = "0.1.0", path = "crates/neuromance-tools" }
neuromance-agent = { version = "0.1.0", path = "crates/neuromance-agent" }
neuromance = { version = "0.1.0", path = "crates/neuromance" }
neuromance-runtime = { version = "0.1.0", path = "crates/neuromance-runtime" }
neuromance-repl = { version = "0.1.0", path = "crates/neuromance-repl" }
neuromance-db = { version = "0.1.0", path = "crates/neuromance-db" }

# External dependencies
anyhow = "1.0"
base64 = "0.22"
async-stream = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
dashmap = "6.1"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = [
    "trace",
    "logs",
    "grpc-tonic",
    "http-proto",
    "reqwest-blocking-client",
] }
opentelemetry-semantic-conventions = "0.31"
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false }
tokio-util = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
reqwest-eventsource = "0.6"
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-retry-after = "0.2"
regex = "1.11.3"
ignore = "0.4"
globset = "0.4"
grep = "0.4"
tokio = { version = "1.0", features = ["full"] }
typed-builder = "0.22"
secrecy = { version = "0.10", features = ["serde"] }
smallvec = { version = "1.13", features = ["serde"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "uuid",
    "json",
] }
tempfile = "3"
toml = "0.9.7"
rmcp = { version = "0.14.0", features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
]}
url = "2.5"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[workspace.lints.clippy]
 all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[profile.release]
lto = "thin"
codegen-units = 16
panic = "abort"
debug = false
