[package]
name = "neuromance-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent framework for autonomous task execution with LLMs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

neuromance = { workspace = true }
neuromance-common = { workspace = true }
neuromance-client = { workspace = true }
neuromance-tools = { workspace = true }


[dev-dependencies]
clap = { workspace = true }
colored = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }

[[example]]
name = "agent_task_vampire"
path = "examples/agent_task_vampire.rs"

[[example]]
name = "sequential_agents_builder"
path = "examples/sequential_agents_builder.rs"
