[package]
name = "neuromance-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent framework for autonomous task execution with LLMs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

neuromance = { workspace = true }
neuromance-common = { workspace = true }
neuromance-client = { workspace = true }
neuromance-context = { workspace = true }
neuromance-tools = { workspace = true }


[dev-dependencies]
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
serde_yaml = { workspace = true }
neuromance-repl = { workspace = true, features = ["subagent"] }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "sequential_agents"
path = "examples/sequential_agents.rs"

[[example]]
name = "sequential_agents_builder"
path = "examples/sequential_agents_builder.rs"

[[example]]
name = "fanout_vote"
path = "examples/fanout_vote.rs"

[[example]]
name = "adversarial_repl"
path = "examples/adversarial_repl.rs"
