[package]
name = "neuromance-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lightweight client for the Neuromance daemon"

[[bin]]
name = "nm"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
neuromance-common = { version = "0.0.6", path = "../neuromance-common" }
rustyline = "17.0.1"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { workspace = true }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "3.0"
dirs = "5.0"
log = { workspace = true }
env_logger = "0.11"
fs2 = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
