[package]
name = "neuromance-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Lightweight client for the Neuromance daemon"

[[bin]]
name = "neuromance"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
neuromance-common = { version = "0.0.6", path = "../neuromance-common" }
neuromance-daemon = { version = "0.0.6", path = "../neuromance-daemon" }
neuromance-proto = { version = "0.0.6", path = "../neuromance-proto" }
rustyline = "17.0.1"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
dirs = "5.0"
log = { workspace = true }
env_logger = { workspace = true }
fs2 = "0.4"
tonic = { workspace = true }
tokio-stream = { workspace = true }
hyper-util = { workspace = true }
tower = "0.4"

