[package]
name = "neuromance-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Rust client library for interacting with LLM inference providers"

[lints]
workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
base64.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
http = "1"
reqwest.workspace = true
reqwest-eventsource.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
reqwest-retry-after.workspace = true
typed-builder.workspace = true
tracing.workspace = true
secrecy.workspace = true
smallvec.workspace = true
url.workspace = true

neuromance-common = { workspace = true }

[dev-dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell = "1.19"
wiremock = "0.6"
proptest = "1.4"
criterion = "0.7"

[[bench]]
name = "streaming"
harness = false

