[package]
name = "neuromance-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Common types and data structures for LLM conversation and tool management"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
typed-builder = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
secrecy = { workspace = true }
smallvec = { workspace = true }
url.workspace = true

[dev-dependencies]
proptest = "1.4"
