[package]
name = "neuromance-context"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Token counting and context management for LLM conversations using Candle"

[features]
default = []
gguf = ["dep:candle-core", "dep:ahash"]
online-tests = []

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
neuromance-common = { workspace = true }
neuromance-client = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Candle dependency for GGUF support (optional)
candle-core = { git = "https://github.com/ecdobry/candle.git", rev = "1cba3b35f10ba9aca33777ded5487a47a5148112", optional = true }

hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = "0.21"

# HTTP client for downloading chat templates and fetching remote skills
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Filesystem utilities
dirs = "5.0"

# Text processing
regex = { workspace = true }

# Template rendering for chat templates
minijinja = "2.13"

# Hash map compatible with tokenizers crate (needed for GGUF tokenizer building)
ahash = { version = "0.8", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
clap = { workspace = true, features = ["env"] }
futures = { workspace = true }
proptest = "1.4"
tempfile = { workspace = true }
wiremock = "0.6"

[[example]]
name = "gguf_metadata"
required-features = ["gguf"]

[[example]]
name = "gguf_tokenizer"
required-features = ["gguf"]
