[package]
name = "neuromance-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Postgres persistence for neuromance conversations and messages"

# Explicit include so the sqlx offline metadata and embedded migrations survive
# packaging. Without it, a consumer that vendors this crate from a source tree
# with no `.git` (e.g. Nix `fetchGit` + crane) gets a `cargo package` file list
# that drops the hidden `.sqlx/` directory, breaking `SQLX_OFFLINE` builds of
# the `sqlx::query!` macros downstream.
include = [
    "src/**/*.rs",
    "migrations/*.sql",
    ".sqlx/query-*.json",
]

[lints]
workspace = true

[dependencies]
neuromance-common = { workspace = true }

async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = "1.4"
tokio = { workspace = true }
