[package]
name = "neuromance-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "gRPC protocol definitions for neuromance daemon/CLI communication"
keywords.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
neuromance-common = { version = "0.0.6", path = "../neuromance-common" }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
smallvec = { workspace = true }

[build-dependencies]
tonic-build = "0.12"

[lints]
workspace = true
