[package]
name = "neuromance-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "REPL environments for LLMs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

# Optional Python support
pyo3 = { version = "0.27.2", features = ["auto-initialize"], optional = true }

# Optional tool integration
neuromance-common = { workspace = true, optional = true }
neuromance-tools = { workspace = true, optional = true }

# Optional sandboxing (Linux only)
landlock = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
neuromance = { workspace = true }
neuromance-client = { workspace = true }
neuromance-common = { workspace = true }
neuromance-tools = { workspace = true }
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
sysinfo = "0.33"  # For tracking memory/CPU usage

[features]
default = []
python = ["pyo3"]
sandbox = ["landlock"]
tools = ["neuromance-common", "neuromance-tools"]
full = ["python", "sandbox", "tools"]

[[bench]]
name = "repl_resources"
harness = false
required-features = ["python"]
