[package]
name = "neuromance-repl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "REPL environments for LLMs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# Optional Python support
pyo3 = { version = "0.27.2", features = ["auto-initialize"], optional = true }

# Optional tool integration
neuromance-common = { workspace = true, optional = true }
neuromance-tools = { workspace = true, optional = true }

# Optional subagent bridge support
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { workspace = true }
serial_test = "3"
proptest = "1.4"
neuromance = { workspace = true }
neuromance-agent = { workspace = true }
neuromance-client = { workspace = true }
neuromance-common = { workspace = true }
neuromance-tools = { workspace = true }
# Benchmarking
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
sysinfo = "0.33"  # For tracking memory/CPU usage

[features]
default = []
python = ["pyo3"]
tools = ["neuromance-common", "neuromance-tools"]
# Inject subagents into the Python namespace. Depends only on the `common`
# subagent contract (via `tools`), so the repl crate never depends on the agent
# crate — keeping `agent -> repl` (repl-as-a-tool) cycle-free.
subagent = ["python", "tools", "dep:tokio-util"]
full = ["python", "tools", "subagent"]

[[example]]
name = "python_subagent"
required-features = ["subagent"]

[[example]]
name = "recursive_llm_query"
required-features = ["python"]

[[example]]
name = "depth_stress_test"
required-features = ["python"]

[[bench]]
name = "repl_resources"
harness = false
required-features = ["python"]
