[package]
name = "neuromance-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Container runtime that executes a Neuromance agent from config (oneshot or serve mode)"
publish = false

[lints]
workspace = true

[[bin]]
name = "neuromance-runtime"
path = "src/main.rs"

[dependencies]
neuromance = { workspace = true }
neuromance-agent = { workspace = true }
neuromance-client = { workspace = true }
neuromance-common = { workspace = true }
neuromance-context = { workspace = true }
neuromance-db = { workspace = true }
neuromance-repl = { workspace = true, features = ["full"], optional = true }
neuromance-tools = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-appender-tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
prost = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }

[features]
default = []
python-repl = ["dep:neuromance-repl"]

[dev-dependencies]
futures = { workspace = true }
serial_test = "3"
sqlx = { workspace = true }
