[package]
name = "neuromance-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Tool execution framework for Neuromance LLM library"

[dependencies]
anyhow.workspace = true 
async-trait.workspace = true 
chrono.workspace = true 
dashmap.workspace = true 
log.workspace = true
serde.workspace = true 
serde_json.workspace = true 
serde_yaml.workspace = true
tokio.workspace = true 
toml.workspace = true
rmcp.workspace = true

neuromance-common = { version = "0.0.5", path = "../neuromance-common" }
