[package]
name = "neuromance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A Rust library for controlling and orchestrating LLM interactions"

[lints]
workspace = true

[dependencies]
neuromance-common = { workspace = true }
neuromance-client = { workspace = true }
neuromance-tools = { workspace = true }
anyhow = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
secrecy = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "streaming_time_tool_demo"
path = "examples/streaming_time_tool_demo.rs"

